# rv32i_hogeos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  linker.ld  riscv32-toolchain.cmake  run.sh
boot/: crt0.S
include/: uart.h
src/: main.c  uart.c
